--- a/src/markdown/2011-04-07-head-cold-2.md
+++ b/src/markdown/2011-04-07-head-cold-2.md
@@ -3,6 +3,7 @@ title: Head Cold 2
 date: 2011-04-07T13:36:56+00:00
 author: seancamden
 layout: post
+path: 2011/04/07
 ---
 The response came from my primary doctor.
 
