--- a/src/markdown/2011-04-14-head-cold-6.md
+++ b/src/markdown/2011-04-14-head-cold-6.md
@@ -3,6 +3,7 @@ title: Head Cold 6
 date: 2011-04-14T17:39:59+00:00
 author: seancamden
 layout: post
+path: 2011/04/14
 ---
 And then I get this a few hours later.
 
