Tidying up the markdown, paths are in

--- a/src/markdown/2011-04-07-head-cold-1.md
+++ b/src/markdown/2011-04-07-head-cold-1.md
@@ -3,7 +3,7 @@ title: Cold leading to ear ache
 date: 2011-04-07T10:27:49+00:00
 author: seancamden
 layout: post
-path: 2011/04/07
+path: /2011/04/07
 ---
 I sent this using the hospital-supplied messaging system to an alternate doctor because, according to the system, my primary doctor was not in the office at the time.
 
