--- a/src/markdown/2011-04-14-head-cold-5.md
+++ b/src/markdown/2011-04-14-head-cold-5.md
@@ -3,7 +3,7 @@ title: Head Cold 5
 date: 2011-04-14T13:47:34+00:00
 author: seancamden
 layout: post
-path: 2011/04/14
+path: /2011/04/14
 ---
 I waited a day and then sent this:
 
