--- a/src/markdown/2011-04-09-kelp-cam.md
+++ b/src/markdown/2011-04-09-kelp-cam.md
@@ -3,7 +3,7 @@ title: Kelp Cam
 date: 2011-04-09T13:31:40+00:00
 author: seancamden
 layout: post
-path: 2011/04/09
+path: /2011/04/09
 ---
 [<img src="http://www.seancamden.com/wp-content/uploads/2011/04/Screen-shot-2011-04-09-at-1.29.21-PM.png" alt="Monterey Bay Aquarium Kelp Forest Web Cam" title="Monterey Bay Aquarium Kelp Forest Web Cam" width="300" height="222" class="alignnone size-full wp-image-343" />](http://www.montereybayaquarium.org/efc/efc_kelp/kelp_cam.aspx)
 
