--- a/src/markdown/2011-04-13-head-cold-3.md
+++ b/src/markdown/2011-04-13-head-cold-3.md
@@ -3,7 +3,7 @@ title: Head Cold 3
 date: 2011-04-13T11:36:15+00:00
 author: seancamden
 layout: post
-path: 2011/04/13
+path: /2011/04/13
 ---
 I wrote back a few days later because things hadn&#8217;t improved.
 
