Revert "Tidying up the markdown, added final '/' to path value"
This reverts commit b9127a143661facebdfaa9fc3a268f5565585491.

--- a/src/markdown/2011-04-07-head-cold-2.md
+++ b/src/markdown/2011-04-07-head-cold-2.md
@@ -1,7 +1,7 @@
 ---
 title: Head Cold 2
 date: 2011-04-07T13:36:56+00:00
-path: /2011/04/07/
+path: /2011/04/07
 ---
 The response came from my primary doctor.
 
