--- a/src/markdown/2011-04-13-head-cold-4.md
+++ b/src/markdown/2011-04-13-head-cold-4.md
@@ -1,7 +1,7 @@
 ---
 title: Head Cold 4
 date: 2011-04-13T11:49:08+00:00
-path: /2011/04/13/
+path: /2011/04/13
 ---
 And I sent another message to doctor #2 just in case.
 
