--- a/src/markdown/2011-04-14-head-cold-5.md
+++ b/src/markdown/2011-04-14-head-cold-5.md
@@ -1,7 +1,7 @@
 ---
 title: Head Cold 5
 date: 2011-04-14T13:47:34+00:00
-path: /2011/04/14/
+path: /2011/04/14
 ---
 I waited a day and then sent this:
 
